--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,2 +1,3 @@
 <h1>Schooler</h1>
 <h3><%= link_to 'Log In', login_path %></h3><h3><%= link_to 'Sign Up', new_user_path %></h3>
+<h3><%= link_to "Log In with Google", '/auth/google_oauth2' %></h3>
