--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,3 +1,7 @@
 <h1>Schooler</h1>
+<% flash.each do |key, value| %>
+    <div class = "alert alert-<%=key%>"><%= value %>
+    </div>
+<%end%>
 <h3><%= link_to 'Log In', login_path %></h3><h3><%= link_to 'Sign Up', new_user_path %></h3>
 <h3><%= link_to "Log In with Google", '/auth/google_oauth2' %></h3>
