--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -4,4 +4,4 @@
     </div>
 <%end%>
 <h3><%= link_to 'Log In', login_path %></h3><h3><%= link_to 'Sign Up', new_user_path %></h3>
-<h3><%= link_to "Log In with Google", '/auth/google_oauth2' %></h3>
+<h3><%= link_to "Log In with GitHub", '/auth/github' %></h3>
