--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'layouts/errors', locals: {object:@user} %>
+<%= @user.errors.full_messages.first if @user.errors.any? %>
 <%= form_for @user do |f|%>
     <%= f.label :name %>
     <%= f.text_field :name %>
