--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'layouts/errors', locals: {object:@student} %>
+<%= @student.errors.full_messages.first if @student.errors.any? %>
 <%= form_tag students_path do %>
     <%= label_tag('student[name]', "Name:")  %>
     <%= text_field_tag('student[name]') %>
