--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "Students", students_path %>
       <%= link_to "Courses", courses_path %>
       <%= link_to "Create A Course", new_course_path %>
-      <%= link_to "Schedual", meetings_path %>
+      <%= link_to "Schedule", meetings_path %>
       <%= link_to "All Materials", materials_path %>
       <%= link_to "Log Out", logout_path %>
     <%end%>
