--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @user do |f|%>
+    <%= render partial: 'layouts/errors', locals: {object:@user} %>
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.label :email %>
